--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Knowledgebase
-# url: "https://orange-ape.cloudvent.net/"
-# baseurl:
+url: "https://gandhi-97.github.io/base-jekyll-template"
+baseurl:
 port: 4210
 google_analytics_key:
 disqus_shortname:
