--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ permalink: /:categories/:title/
 plugins:
   - jekyll-extract-element
   - jekyll-sitemap
-  # - jekyll-seo-tag
+  - jekyll-seo-tag
   - jekyll-feed
   - jekyll-archives
 
