--- a/_config.yml
+++ b/_config.yml
@@ -70,6 +70,7 @@ defaults:
       path: ""
     values:
       layout: "default"
+      image: /assets/images/kb.png
   -
     scope:
       type: "posts"
