--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ timezone: "America/Vancouver"
 date_format: "%B %-d, %Y"
 link-tags: true
 
-permalink: /:categories/:title
+permalink: /:title
 
 plugins:
   - jekyll-extract-element
